<resources>
    <string name="app_name">Smart Strength Log</string>
    <string name="title_text">Welcome to:</string>
    <string name="quote_text">Train smarter, get stronger.</string>
    <string name="getstartedtex">Get started</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="button_CreateAccount_text">Create Account</string>
    <string name="button_login_text">Sign-in</string>
    <string name="button_go_to_createAccount_text">Create a new account</string>
    <string name="button_go_to_login_text">Sign in</string>
    <string name="already_text">Already have an account?</string>
    <string name="title_activity_main_menu">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_performance">Performance</string>
    <string name="newWorkoutButton">New Workout Button</string>
    <string name="titleWorkout_hint">Title of the workout</string>
    <string name="Description_Workout_hint">Description</string>
    <string name="button_create_workout_text">Create workout</string>
    <string name="exercise_Workout_hint">Exercise</string>
    <string name="sets_Workout_hint">Number of sets</string>
    <string name="title_workout_creating_text">New Workout:</string>
    <string name="noWorkouts_hint">Create your first workouts!</string>
    <string name="title_Workout">Workout</string>
    <string name="title_Stats">Performance</string>
    <string name="home_tittle">All your workouts</string>
    <string name="all_your_workouts">All your workouts:</string>
    <string name="header_home_page">Your profile:</string>
    <string name="image_description">Profile Image</string>
    <string name="number_reps">Reps</string>
    <string name="weight">Weight</string>
    <string name="no_data">--</string>
    <string name="_TAG">Weight:</string>
    <string name="reps_TAG">Reps:</string>
    <string name="rir_TAG">RIR:</string>
    <string name="performance_intro">Study your performance:</string>
    <string name="exercise_progress_text">Track progress of an exercise</string>
    <string name="rm_calculator_text">Calculate your 1 RM</string>
    <string name="export_progress_text">Export your progress to CSV</string>
    <string name="routine_selection">Select the routine that contains the exercise you want to study:</string>
    <string name="exercise_selection_text">Select the exercise you want to study:</string>
    <string name="rm_tittle">1 RM Calculator</string>
    <string name="reps_rm_info">Reps: Number of repetitions until muscle failure.</string>
    <string name="weight_rm_info">Weight: Weight lifted in kilograms.</string>
    <string name="more_info_rm">What is this?</string>
    <string name="button_CreateAccount_Title">Let´s start!</string>
    <string name="ExportdataTitle">Export Your Workout Data</string>
    <string name="texto_ExportData_guia">Smart Strength Log allows you to export the information saved in the cloud of your last workout to a "csv" file.</string>
    <string name="texto_ExportData_guia_2">You can either save directly the file to your device or send it send it through another app such as Email or WhatsApp.</string>
    <string name="routine_selection_ExportData">Select the routine you want to export Data from</string>
    <string name="create_wk_button">Create Workout</string>
    <string name="Log_in_Title">Sign-In</string>
    <string name="how_stats">Graph info</string>
    <string name="all_your_workouts_explain">Create a new workout or click on an existing one to start working out.</string>
    <string name="header_last_WK">Last workouts done:</string>
    <string name="No_info_last_WK">No info available.</string>
    <string name="description_exercise_Workout_hint">Notes (rep range, technique, ect)</string>
    <string name="routine_selection_delete">Select the Workout you want to delete:</string>
    <string name="routine_selection_delete_warning">Be aware that all the sessions registered from this workout routine will be deleted.</string>
    <string name="About">About SSL</string>
    <string name="event_planner_text">All my events</string>
    <string name="forward"><![CDATA[-->]]></string>
    <string name="back"><![CDATA[<--]]></string>
    <string name="titleEvent_hint">Name of the event</string>
    <string name="title_event">New Event:</string>
    <string name="all_your_events">All your events:</string>
    <string name="all_your_events_explain">This list shows all your upcoming events.</string>
    <string name="event_selection_delete">Select the event you want to delete:</string>
    <string name="event_selection_delete_warning">Be aware that the event will be permanently deleted.</string>
    <string name="select_a_date">Select a date</string>
    <string name="save_event">SAVE EVENT</string>
    <string name="foto_exportar_csv">Foto exportar csv</string>
    <string name="export_data">Export Data</string>
    <string name="exercise_1">Exercise 1</string>
    <string name="show_progress">SHOW PROGRESS</string>
    <string name="complete_info_1rm">Complete the information to calculate your 1 RM:</string>
    <string name="calculate">Calculate</string>
    <string name="name_event">Name Event</string>
    <string name="date">Date</string>
    <string name="icono_calendario">Icono calendario</string>
    <string name="icono_papelera">Icono papelera</string>
    <string name="icono_sin_circulo_ssl">Icono sin circulo SSL</string>
    <string name="log_out">LOG OUT</string>
    <string name="textview">TextView</string>
</resources>