<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewWorkoutCreator">



  <LinearLayout
      android:id="@+id/acct_login_form"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

    <TextView
        android:id="@+id/title_workout_creating"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/roboto_slab_bold"
        android:text="@string/title_workout_creating_text"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/title_workout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/titleWorkout_hint"
        android:maxLines="1" />

    <EditText
        android:id="@+id/description_workout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/Description_Workout_hint"
        android:maxLines="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

      <EditText
          android:id="@+id/ejercicio_workout"
          android:layout_width="187dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:layout_marginRight="10dp"
          android:hint="@string/exercise_Workout_hint"
          android:maxLines="1" />

      <EditText
          android:id="@+id/seires_workout"
          android:layout_width="138dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:hint="@string/sets_Workout_hint"
          android:maxLines="1" />
    </LinearLayout>


    <Button
        android:id="@+id/button_create_workout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:onClick="createWorkout"
        android:text="@string/button_create_workout_text"
        android:textColor="@color/black"
        android:textStyle="bold" />


  </LinearLayout>


</LinearLayout>