<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccountActivity">


    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/acct_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/header_Home_Page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-thin"
            android:gravity="center"
            android:text="@string/button_CreateAccount_Title"
            android:textSize="30sp" />

        <AutoCompleteTextView
            android:layout_marginTop="16dp"
            android:id="@+id/email_CreateAccount"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/password_CreateAccount"
            android:layout_marginTop="16dp"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/repassword_CreateAccount"
            android:layout_marginTop="16dp"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/button_CreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:onClick="buttonPress"
            android:text="@string/button_CreateAccount_text"
            android:textColor="@color/black"
            android:textStyle="bold" />
        <TextView
            android:text="@string/already_text"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/button_go_to_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:onClick="signInButton"
            android:text="@string/button_go_to_login_text"
            android:textColor="@color/black"
            android:textStyle="bold" />


    </LinearLayout>

</LinearLayout>