<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">


    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.smartstrengthlog.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_workout"
        android:name="com.example.smartstrengthlog.ui.dashboard.DashboardFragment"
        android:label="@string/title_Workout"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_performance"
        android:name="com.example.smartstrengthlog.ui.notifications.NotificationsFragment"
        android:label="@string/title_performance"
        tools:layout="@layout/fragment_notifications" />
</navigation>