<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProgressTracking.RmCalculator">


    <TextView
        android:id="@+id/rc_calculator_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/roboto_slab_bold"
        android:gravity="center"
        android:text="@string/rm_tittle"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_more_info_rm"
        android:layout_width="146dp"
        android:layout_height="51dp"
        android:background="@android:color/transparent"
        android:onClick="buttonPress"
        android:text="@string/more_info_rm"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rc_calculator_title" />

    <TextView
        android:id="@+id/texto_rm_guia"
        android:layout_width="292dp"
        android:layout_height="15dp"
        android:maxLines="1"
        android:text="Complete the information to calculate your 1 RM:"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rc_calculator_title"
        app:layout_constraintVertical_bias="0.8" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="221dp"
        android:layout_height="56dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rc_calculator_title"
        app:layout_constraintVertical_bias="0.223">

        <EditText
            android:id="@+id/reps_rm"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginRight="10dp"
            android:autofillHints=""
            android:hint="@string/number_reps"
            android:inputType="number"
            android:maxLines="1" />

        <EditText
            android:id="@+id/weight_rm"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginRight="10dp"
            android:hint="@string/weight"
            android:inputType="number"
            android:maxLines="1" />



    </LinearLayout>

    <TextView
        android:id="@+id/reps_rm_info"
        android:layout_width="255dp"
        android:layout_height="27dp"
        android:layout_marginTop="16dp"
        android:maxLines="1"
        android:text="@string/reps_rm_info"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <TextView
        android:id="@+id/wight_rm_info"
        android:layout_width="255dp"
        android:layout_height="27dp"
        android:layout_marginBottom="16dp"
        android:maxLines="1"
        android:text="@string/weight_rm_info"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/weight_rm_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reps_rm_info"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button_calculate_rm"
        android:layout_width="274dp"
        android:layout_height="46dp"
        android:text="Calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.246" />

    <TextView
        android:id="@+id/result_rm_calculation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_calculate_rm"
        app:layout_constraintVertical_bias="0.226" />


</androidx.constraintlayout.widget.ConstraintLayout>