<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Events.EventList"
    android:background="@drawable/gradient_bg">

  <TextView
      android:id="@+id/all_yourEvents_Title"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_marginTop="44dp"
      android:fontFamily="sans-serif-thin"
      android:gravity="center"
      android:text="@string/all_your_events"
      android:textSize="30sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/all_your_events_explain"
      android:layout_width="377dp"
      android:layout_height="34dp"
      android:layout_marginTop="4dp"
      android:gravity="center"
      android:text="@string/all_your_events_explain"
      android:textSize="12sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/all_yourEvents_Title" />


  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/recyclerViewEvents"
      android:layout_width="match_parent"
      android:layout_height="576dp"
      android:layout_marginHorizontal="5dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/all_yourWK_explain">

  </androidx.recyclerview.widget.RecyclerView>

  <com.google.android.material.floatingactionbutton.FloatingActionButton
      android:id="@+id/newEventButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:clickable="true"
      android:contentDescription="@string/newWorkoutButton"
      android:focusable="true"
      android:onClick="createEvent"
      android:src="@android:drawable/ic_input_add"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.954"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.922"
      android:backgroundTint="@color/floatingboton_color"
      app:borderWidth="0dp"
      app:tint="@android:color/white"/>


  app:layout_constraintVertical_bias="0.986" />

</androidx.constraintlayout.widget.ConstraintLayout>